--- a/main.html
+++ b/main.html
@@ -10,8 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<caption><h1>Item Cart</h1></caption>
+
 <table>
+	<caption>
+		<h1>Item Cart</h1>
+	</caption>
 	<thead>
 		<tr>
 		<th>Item</th>
